--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,32 @@
 version: '2'
 services:
-  odas:
-    container_name: odas_c
+  odas_backend:
+    container_name: odas_flask
     restart: always
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./backend/Dockerfile
     command: []
     ports:
       - "5000:1000" # external:internal
     volumes:
-      - .:/odas
+      - ./backend:/odas
   redis:
     image: "redis:alpine"
     container_name: "db"
     ports:
     - 6379:6379
+  odas_frontend:
+    container_name: odas_vue
+    restart: always
+    build:
+      context: .
+      dockerfile: ./frontend/vueapp/Dockerfile
+    command: []
+    ports:
+      - "8081:5000" # external:internal
+    volumes:
+      - "./frontend/vueapp:/app"
+    environment:
+      - ENV=development
+      - PORT=5000
