--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   odas_backend:
-    container_name: odas_flask
+    container_name: odas_flask_t
     restart: always
     build:
       context: .
@@ -13,20 +13,20 @@ services:
       - ./backend:/odas
   redis:
     image: "redis:alpine"
-    container_name: "db"
+    container_name: db_t
     ports:
     - 6379:6379
   odas_frontend:
-    container_name: odas_vue
+    container_name: odas_vue_t
     restart: always
     build:
       context: .
-      dockerfile: ./frontend/vueapp/Dockerfile
+      dockerfile: ./docker/frontend/Dockerfile
     command: []
     ports:
       - "8081:5000" # external:internal
     volumes:
-      - "./frontend/vueapp:/app"
+      - "./frontend/vueapp/src:/app/src"
     environment:
       - ENV=development
       - PORT=5000
