--- a/frontend/vueapp/package.json
+++ b/frontend/vueapp/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.2.0",
     "core-js": "^3.4.4",
-    "vue": "^2.6.10"
+    "mutationobserver-shim": "^0.3.3",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
