--- a/frontend/vueapp/package.json
+++ b/frontend/vueapp/package.json
@@ -13,7 +13,8 @@
     "bootstrap-vue": "^2.2.0",
     "core-js": "^3.4.4",
     "mutationobserver-shim": "^0.3.3",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
