--- a/frontend/vueapp/package.json
+++ b/frontend/vueapp/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.4.4",
     "mutationobserver-shim": "^0.3.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-session": "^1.0.0",
+    "vue-cookie": "^1.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
