--- a/frontend/vueapp/package.json
+++ b/frontend/vueapp/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.3",
     "vue-session": "^1.0.0",
-    "vue-cookie": "^1.1.4"
+    "vue-cookie": "^1.1.4",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
