--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3.4'
 services:
   odas_backend:
     container_name: odas_flask_t
@@ -22,11 +22,14 @@ services:
     build:
       context: .
       dockerfile: ./docker/frontend/Dockerfile
+      target: # uncomment selected stage: auto-reloading dev OR hosted by nginx for release    
+              dev-stage
+              #production-stage 
     command: []
     ports:
-      - "8081:5000" # external:internal
+      - "8081:80" # external:internal
     volumes:
       - "./frontend/vueapp/src:/app/src"
     environment:
       - ENV=development
-      - PORT=5000
+      - PORT=80 #need to be 80, becouse of nginx
