--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:latest
+FROM node:latest as dev-stage
 
 RUN mkdir /app
 WORKDIR /app
@@ -7,3 +7,17 @@ RUN npm install
 COPY ./frontend/vueapp .
 EXPOSE 5000
 CMD ["npm", "run", "serve"]
+
+# build stage
+FROM node:lts-alpine as build-stage
+WORKDIR /app
+COPY ./frontend/vueapp/package.json .
+RUN npm install
+COPY ./frontend/vueapp .
+RUN npm run build
+
+# production stage
+FROM nginx:stable-alpine as production-stage
+COPY --from=build-stage /app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
